# Compiler_Experienment

./: CMakeLists.txt  README.md  main.cpp
exp1_lexer/: Lexer.cpp  Lexer.h  LexerMain.cpp  program.txt
exp1_myLexer/: MyLexer.h  MyLexerMain.cpp  program.txt
exp2_grammar/: Grammar.h  g.txt
exp2_myGrammar/: MyGrammar.h  MyGrammarMain.cpp  g.txt
exp3_LL1/: LL1Grammar.h  LL1GrammarMain.cpp  g.txt  result.txt
exp4_preAnalytics/: LL1Grammar.h  MyLexer.h  predictiveAnalytics.h  predictiveAnalyticsMain.cpp
exp4_preAnalytics/file/: expression.txt  g.txt  predictive_table.csv  process.csv  result.txt
exp5_LR/: LR.h  LRMain.cpp  MyLexer.h
exp5_LR/file/: g.txt  process.csv  result.txt
exp6_reversePolish/: LR.h  MyLexer.h
exp6_reversePolish/file/: LR_Table.csv  expression.txt  process.csv  result.txt
exp6_reversePolish/operatorsPrecedence/: operatorsPrecedenceMain.cpp
